Add commit instructions

--- a/index.html
+++ b/index.html
@@ -7,6 +7,39 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>I AM COOL!!</h1>
+    <h1>Commands to make a project and start tracking history</h1>
+    <ul>
+        <!-- navigate to the desktop folder using the terminal -->
+        <li><code>cd Desktop</code></li>
+
+        <!-- Make a directory my-project -->
+        <li><code>mkdir my-project</code></li>
+
+        <!-- navigate to my-project -->
+        <li><code>cd my-project</code></li>
+
+        <!-- Create a file called index.html -->
+        <li><code>touch index.html</code></li>
+
+        <!-- Open the current directory in vs-code (so we can edit it!) -->
+        <li><code>code .</code></li>
+
+        <!-- Create a LOCAL git repository -->
+        <li><code>git init</code></li>
+
+        <!-- Stage the changes in index.html for my next commit -->
+        <li><code>git add index.html</code></li>
+
+        <!-- Commit the staged changes to my local git repository -->
+        <li><code>git commit -m "my message"</code></li>
+
+        <!-- Show me my history so far -->
+        <li><code>git log</code></li>
+
+        <!-- Go back to the terminal (so I can type again thx...) -->
+        <li><code>(exit with :q)</code></li>
+
+        
+    </ul>
 </body>
 </html>
