--- a/index.html
+++ b/index.html
@@ -39,7 +39,14 @@
         <!-- Go back to the terminal (so I can type again thx...) -->
         <li><code>(exit with :q)</code></li>
 
-        
     </ul>
+
+    <h1> Steps to publish our code on github </h1>
+    <ol>
+        <li>Make a repository on github</li>
+        <li>Add a remote</li>
+        <li><code>git remote add origin ...url (NOT HTTPS!!111!)</code></li>
+        <li><code>git push origin master</code></li>
+    </ol>
 </body>
 </html>
