Add the best style

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-<body>
+<body style="background-color: hotpink; color: white;">
     <h1>Commands to make a project and start tracking history</h1>
     <ul>
         <!-- navigate to the desktop folder using the terminal -->
